tests/specs/ecosystem/corset/time/0_0_6.test
corset/time/0.0.6
-- deno.lock --
{}
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Could not find npm package '@corset/space' matching '0.0.7'.
    at file://<tmpdir>/src/primitives.ts:1:80

